  all, with some notable exceptions: Output.output is required when
  bypassing the standard channels (writeln etc.), or in token
  translations to produce properly formatted results; Output.raw is
  required when capturing already output material that will eventually
  be presented to the user a second time.  For the default print mode,
  both Output.output and Output.raw have no effect.


*** HOL ***

* HOL/record: reimplementation of records. Improved scalability for
  records with many fields, avoiding performance problems for type
  inference. Records are no longer composed of nested field types, but
  of nested extension types. Therefore the record type only grows
  linear in the number of extensions and not in the number of fields.
  The top-level (users) view on records is preserved.  Potential
  INCOMPATIBILITY only in strange cases, where the theory depends on
  the old record representation. The type generated for a record is
  called <record_name>_ext_type.

* HOL/record: Reference record_quick_and_dirty_sensitive can be
  enabled to skip the proofs triggered by a record definition or a
  simproc (if quick_and_dirty is enabled). Definitions of large
  records can take quite long.

* HOL/record: "record_upd_simproc" for simplification of multiple
  record updates enabled by default.  Moreover, trivial updates are
  also removed: r(|x := x r|) = r.  INCOMPATIBILITY: old proofs break
  occasionally, since simplification is more powerful by default.

* HOL: symbolic syntax of Hilbert Choice Operator is now as follows:

  syntax (epsilon)
    "_Eps" :: "[pttrn, bool] => 'a"    ("(3\<some>_./ _)" [0, 10] 10)

  The symbol \<some> is displayed as the alternative epsilon of LaTeX
  and x-symbol; use option '-m epsilon' to get it actually printed.
  Moreover, the mathematically important symbolic identifier
  \<epsilon> becomes available as variable, constant etc.

* HOL/SetInterval: The syntax for open intervals has changed:

  Old         New